--- a/src/assets/css/roleManagement.css
+++ b/src/assets/css/roleManagement.css
@@ -1,8 +1,12 @@
-#Role_Management_CRUD .choices * {
+.choices * {
   transition: none !important;
 }
-#Role_Management_CRUD .choices .choices__list--multiple .choices__item {
+.choices .choices__list--multiple .choices__item {
   border-radius: 5px !important;
   background-color: #319db5 !important;
   border: none !important;
+}
+
+.loading.d-none ~ .usr-prev-lists {
+  display: block !important;
 }
