--- a/src/resources/scss/roleManagement.scss
+++ b/src/resources/scss/roleManagement.scss
@@ -1,14 +1,16 @@
-#Role_Management_CRUD{
-    .choices{
-        *{
-            transition: none !important;
-        }
-        .choices__list--multiple{
-            .choices__item{
-                border-radius: 5px !important;
-                background-color: #319db5 !important;
-                border: none !important;
-            }
-        } 
+.choices{
+    *{
+        transition: none !important;
     }
+    .choices__list--multiple{
+        .choices__item{
+            border-radius: 5px !important;
+            background-color: #319db5 !important;
+            border: none !important;
+        }
+    } 
+}
+
+.loading.d-none ~ .usr-prev-lists{
+    display: block !important;
 }
